--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="span4 about">
 	About
       </div>
-      <div class="row heading">
+      </div>
 	<div class="span12">
 	  <h1>Bitstarter Title</h1>
 	</div>
